inference for new trial

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from demo_utils import load_model_and_data, model_inference\n",
+    "from utils.demo_utils import load_model_and_data, model_inference\n",
     "from gcn_models.utils import set_seed\n",
     "from gcn_models.evaluator import Evaluator\n",
     "set_seed(24)"
