--- a/notebooks/predict_for_new_clinial_trial.ipynb
+++ b/notebooks/predict_for_new_clinial_trial.ipynb
@@ -1368,7 +1368,7 @@
     "    = prepare_runner(ef_args, ef_dataset, ef_encoder, ef_bert_encoder, ef_model)\n",
     "\n",
     "_, y_test_pred, _ = model_inference(ef_runner, mode='test') \n",
-    "print ('y_test_pred.size()', y_test_pred.size(), 'y_test_true.size()', y_test_true.size())"
+    "print ('y_test_pred.size()', y_test_pred.size())"
    ]
   },
   {
